Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.46.00

              xwdtopnm: Add -cmapdump .

              xwdtopnm: Change maxval calculation for truecolor to fit
              X11 spec.  Now it's determined by bits_per_rgb.

              xwdtopnm: Add warning about 2 byte sample output.
         
              pnmcrop: fast path for PBM.

              pnmscale: finally make it just an alias of pamscale, which
              obsoleted it in 10.20.
              
              pnmcut: finally make it just an alias of pamcut, which
              obsoleted it in 9.20.

              pnmcrop: various fixes.

              pnmcat: fix array bound violation with PBM top/bottom
              concatenation.  Introduced in 10.44.

              ilbmtoppm: Fix array bound violation with compressed ILBM.
              Introduced in 10.18.

              fitstopnm: fix garbage output when input is little endian
              floating point FITS.

              picttoppm: Fix crash with -fullres and all-text PICT image.
              Also issue warning that program omits text with -fullres.

              picttoppm: Improve error/informational messages.

              picttoppm: Don't fail if 'fontdir' file doesn't exist.  Bug
              from 10.44.

              ppmtopict: Use two-byte length field when image width > 200
              instead of > 250.  Former is what Picttoppm has been assuming
              since March 2004, when it was found to work better than 250,
              which is the number documented as right.

              ilbmtoppm: fix bug: appends color map PPM to output if input
              has color map; fails if input doesn't have color map.  Broken
              in 10.18.

              leaftoppm: fix bug: uses red channel as all three channels;
              (produces grayscale output).  Broken between 10.19 and 10.26,
              inclusive.

              pbmtomrf, mrftopbm: fix crashes, incorrect output in all